name:                bored-robot
version:             0.1.0.0
synopsis:            CI tooling in Haskell
description:         CI tooling in Haskell
homepage:            https://github.com/lancelet/bored-robot#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2017 Jonathan Merritt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Lib
                     , CI.Filesystem
                     , CI.Git
                     , CI.Docker
                     , CI.Env
                     , CI.Proc
                     , CI.ProgName
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     , cryptonite
                     , directory
                     , exceptions
                     , more-extensible-effects
                     , process-extras
                     , text
                     , vector

executable bored-robot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bored-robot
  default-language:    Haskell2010

executable docker-fu
  hs-source-dirs:      app
  main-is:             docker-fu.hs
  other-modules:       DockerFu
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010
  build-depends:       base
                     , bored-robot
                     , optparse-applicative
                     , text
                     , more-extensible-effects

test-suite bored-robot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       AppSpec
                     , CI.FilesystemSpec
                     , CI.ProcSpec
  build-depends:       base
                     , bytestring
                     , QuickCheck
                     , bored-robot
                     , containers
                     , more-extensible-effects
                     , optparse-applicative
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , vector

source-repository head
  type:     git
  location: https://github.com/githubuser/bored-robot
